# mimiclaw

./: AGENTS.md  README.md  README_CN.md  README_JA.md  partitions-esp32c3.csv  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32s3
assets/: banner_320x172.rgb565
main/: CMakeLists.txt  hw_stub_esp32c3.c  idf_component.yml  mimi.c  mimi_config.h  mimi_secrets.h.example
main/agent/: agent_loop.c
main/camera/: camera.c  camera.h  camera_pins.h
main/imu/: imu_manager.c
main/llm/: llm_proxy.c
main/telegram/: telegram_bot.c  telegram_bot.h
main/tools/: tool_camera.c  tool_camera.h  tool_registry.c  tool_registry.h  tool_subagent.c  tool_subagent.h
